--- a/dev.env
+++ b/dev.env
@@ -1,1 +1,3 @@
-
+PORT=3000
+MONGODB_URL=mongodb+srv://nipuntopno:Nipun123@cluster0.ydchfxl.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=8AeLEQtOxa
